force-app/main/default/objects/BOT_Maintenance_Page_Data__c/BOT_Maintenance_Page_Data__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object is created by BusinessOne technologies Inc. It holds the static data for maintenance page.</description>
    <label>Maintenance Page Data</label>
</CustomObject>