force-app/main/default/objects/BOT_Maintenance_Page_Data__c/fields/BOT_Description__c.field-meta.xml
<CustomField>
    <fullName>BOT_Description__c</fullName>
    <description>to hold the object description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>