force-app/main/default/objects/BOT_Maintenance_Page_Data__c/fields/BOT_Include_to_Delete_All__c.field-meta.xml
<CustomField>
    <fullName>BOT_Include_to_Delete_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicates that the object should include under delete all or not.</description>
    <label>Include to Delete All</label>
    <type>Checkbox</type>
</CustomField>