force-app/main/default/objects/BOT_Maintenance_Page_Data__c/fields/BOT_No_of_Errors__c.field-meta.xml
<CustomField>
    <fullName>BOT_No_of_Errors__c</fullName>
    <description>To hold the number of records failed to delete.</description>
    <label>No of Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>