force-app/main/default/objects/BOT_Maintenance_Page_Data__c/fields/BOT_Query_String__c.field-meta.xml
<CustomField>
    <fullName>BOT_Query_String__c</fullName>
    <description>To hold the query string.</description>
    <label>Query String</label>
    <type>TextArea</type>
</CustomField>