force-app/main/default/objects/BOT_Maintenance_Page_Data__c/fields/BOT_Status__c.field-meta.xml
<CustomField>
    <fullName>BOT_Status__c</fullName>
    <description>To hold the batch job status</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>