force-app/main/default/objects/BOT_Maintenance_Page_Data__c/fields/BOT_Total_Records__c.field-meta.xml
<CustomField>
    <fullName>BOT_Total_Records__c</fullName>
    <description>To hold the total records present in the object.</description>
    <label>Total Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>